Se anexo el area de contacto

--- a/js/producto.html
+++ b/js/producto.html
@@ -28,7 +28,7 @@
                 <div class="navbar-nav ml-auto">
                   <a class="nav-link link-menu" aria-current="page" href="index.html">Inicio</a>
                   <a class="nav-link active link-menu" href="producto.html">Producto</a>
-                  <a class="nav-link link-menu" href="#">Contacto</a>
+                  <a class="nav-link link-menu" href="contacto.html">Contacto</a>
                   
                 </div>
               </div>
