Implementación de video

--- a/js/index.html
+++ b/js/index.html
@@ -51,6 +51,7 @@
                     tendras muchas opciones para elegir.
                 </p>
             </div>
+            <iframe width="550" height="310" src="https://www.youtube.com/watch?v=RdyCMG41peU" frameborder="0" allowfullscreen></iframe>
         </div>
         </div>
 
